Extension now runs python script

--- a/llamadoc/package.json
+++ b/llamadoc/package.json
@@ -13,8 +13,8 @@
   "main": "./extension.js",
   "contributes": {
     "commands": [{
-      "command": "llamadoc.helloWorld",
-      "title": "Hello World"
+      "command": "llamadoc.scanFile",
+      "title": "Scan file"
     }]
   },
   "scripts": {
