--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 github-scraper/repositories.json
 github-scraper/cloned_repos
 github-scrper/extracted-py-files
+github-scraper/filtered_repositories.json
