--- a/github-scraper/requirements.txt
+++ b/github-scraper/requirements.txt
@@ -14,6 +14,8 @@ exceptiongroup==1.2.1
 executing==2.0.1
 fastjsonschema==2.19.1
 fonttools==4.51.0
+gitdb==4.0.11
+GitPython==3.1.43
 idna==3.7
 ipykernel==6.29.4
 ipython==8.24.0
@@ -26,7 +28,6 @@ jupyter_core==5.7.2
 kiwisolver==1.4.5
 matplotlib==3.8.4
 matplotlib-inline==0.1.7
-nbformat==5.10.4
 nest-asyncio==1.6.0
 numpy==1.26.4
 packaging==24.0
@@ -35,7 +36,6 @@ parso==0.8.4
 pexpect==4.9.0
 pillow==10.3.0
 platformdirs==4.2.1
-plotly==5.22.0
 prompt-toolkit==3.0.43
 psutil==5.9.8
 ptyprocess==0.7.0
@@ -57,6 +57,7 @@ scipy==1.13.0
 seaborn==0.13.2
 Send2Trash==1.8.3
 six==1.16.0
+smmap==5.0.1
 stack-data==0.6.3
 tenacity==8.3.0
 threadpoolctl==3.5.0
