--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 **/node_modules
 **/.venv
 **/auth.token
+github-scraper/extracted-py-files
+github-scraper/filtered_repositories.json
+github-scraper/repositories.json
+github-scraper/cloned_repositories
