--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,15 +3,26 @@
 // Hover to view descriptions of existing attributes.
 // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 {
-	"version": "0.2.0",
-	"configurations": [
-		{
-			"name": "Run Extension",
-			"type": "extensionHost",
-			"request": "launch",
-			"args": [
-				"--extensionDevelopmentPath=${workspaceFolder}/llamadoc"
-			]
-		}
-	]
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "Run Server",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "server.py",
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}/llm-server",
+            "env": {
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"
+            }
+        },
+        {
+            "name": "Run Extension",
+            "type": "extensionHost",
+            "request": "launch",
+            "args": [
+                "--extensionDevelopmentPath=${workspaceFolder}/llamadoc"
+            ]
+        }
+    ]
 }
