--- a/llm-server/requirements.txt
+++ b/llm-server/requirements.txt
@@ -18,6 +18,7 @@ httpx==0.27.0
 huggingface-hub==0.23.0
 idna==3.7
 Jinja2==3.1.4
+joblib==1.4.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
@@ -38,6 +39,7 @@ nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.1.105
 orjson==3.10.3
 packaging==24.0
+pillow==10.3.0
 psutil==5.9.8
 pydantic==2.7.1
 pydantic_core==2.18.2
@@ -49,11 +51,15 @@ regex==2024.5.15
 requests==2.32.1
 rich==13.7.1
 safetensors==0.4.3
+scikit-learn==1.5.0
+scipy==1.13.1
+sentence-transformers==3.0.1
 sentencepiece==0.2.0
 shellingham==1.5.4
 sniffio==1.3.1
 starlette==0.37.2
 sympy==1.12
+threadpoolctl==3.5.0
 tokenizers==0.19.1
 torch==2.3.0
 tqdm==4.66.4
