--- a/github-scraper/requirements.txt
+++ b/github-scraper/requirements.txt
@@ -1,4 +1,7 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
 asttokens==2.4.1
+async-timeout==4.0.3
 attrs==23.2.0
 certifi==2024.2.2
 cffi==1.16.0
@@ -14,6 +17,7 @@ exceptiongroup==1.2.1
 executing==2.0.1
 fastjsonschema==2.19.1
 fonttools==4.51.0
+frozenlist==1.4.1
 gitdb==4.0.11
 GitPython==3.1.43
 idna==3.7
@@ -28,6 +32,7 @@ jupyter_core==5.7.2
 kiwisolver==1.4.5
 matplotlib==3.8.4
 matplotlib-inline==0.1.7
+multidict==6.0.5
 nest-asyncio==1.6.0
 numpy==1.26.4
 packaging==24.0
@@ -69,3 +74,4 @@ tzdata==2024.1
 urllib3==2.2.1
 wcwidth==0.2.13
 wrapt==1.16.0
+yarl==1.9.4
