--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 **/__pycache__
 **/node_modules
 **/.venv
-**/auth.token
+**/github-auth.token
 github-scraper/repositories.json
 github-scraper/cloned_repos
 github-scrper/extracted-py-files
@@ -9,3 +9,5 @@ github-scraper/filtered_repositories.json
 github-scraper/extracted-py-files/
 llm-server/huggingface-token
 llm-server/not-on-server
+**.db
+**.db-journal
