dont use volume

--- a/github-scraper/db/Dockerfile
+++ b/github-scraper/db/Dockerfile
@@ -1,6 +1,6 @@
 FROM postgres:16.2-alpine3.19
 
-VOLUME /var/lib/postgresql/data:./postgres-data
+# VOLUME /var/lib/postgresql/data:./postgres-data
 
 ENV POSTGRES_USER=postgres
 ENV POSTGRES_PASSWORD=postgres
