--- a/github-scraper/requirements.txt
+++ b/github-scraper/requirements.txt
@@ -1,3 +1,76 @@
-python-git==2018.2.1
+asttokens==2.4.1
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==3.0.0
+colorcet==3.1.0
+comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
+dask==2024.6.2
+debugpy==1.8.1
+decorator==5.1.1
+exceptiongroup==1.2.1
+executing==2.0.1
+fonttools==4.53.0
+fsspec==2024.6.0
+gitdb==4.0.11
+GitPython==3.1.43
+glfw==2.7.0
+idna==3.7
+importlib_metadata==7.2.1
+ipykernel==6.29.4
+ipython==8.25.0
+jedi==0.19.1
+joblib==1.4.2
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+kiwisolver==1.4.5
+llvmlite==0.43.0
+locket==1.0.0
+matplotlib==3.9.0
+matplotlib-inline==0.1.7
+multipledispatch==1.0.0
+nest-asyncio==1.6.0
+numba==0.60.0
+numpy==2.0.0
+packaging==24.1
+pandas==2.2.2
+param==2.1.0
+parso==0.8.4
+partd==1.4.2
+patsy==0.5.6
+pexpect==4.9.0
+pillow==10.3.0
+platformdirs==4.2.2
+prompt_toolkit==3.0.47
+psutil==6.0.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyct==0.5.0
+Pygments==2.18.0
+PyOpenGL==3.1.7
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq==26.0.3
+requests==2.32.3
+scikit-learn==1.5.0
+scipy==1.13.1
+seaborn==0.13.2
 Send2Trash==1.8.3
+six==1.16.0
+smmap==5.0.1
+stack-data==0.6.3
+threadpoolctl==3.5.0
+toolz==0.12.1
+tornado==6.4.1
 tqdm==4.66.4
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+wcwidth==0.2.13
+xarray==2024.6.0
+zipp==3.19.2
