--- a/llm-server/Dockerfile
+++ b/llm-server/Dockerfile
@@ -3,9 +3,8 @@ FROM python:3.10.14
 COPY requirements.txt /server/requirements.txt
 RUN pip3 install --no-cache-dir -r /server/requirements.txt
 
-COPY *.py /server/
+COPY . /server/
 COPY entrypoint.sh /usr/local/bin/
-COPY out_of_date_test/ /server/out_of_date_test/
 
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
