--- a/eval/requirements.txt
+++ b/eval/requirements.txt
@@ -1,28 +1,21 @@
+annotated-types==0.7.0
 certifi==2024.6.2
 charset-normalizer==3.3.2
 contourpy==1.2.1
 cycler==0.12.1
 fonttools==4.53.0
-gitdb==4.0.11
-GitPython==3.1.43
 idna==3.7
-joblib==1.4.2
 kiwisolver==1.4.5
 matplotlib==3.9.0
 numpy==2.0.0
 packaging==24.1
-pandas==2.2.2
 pillow==10.3.0
+pydantic==2.7.4
+pydantic_core==2.18.4
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
-pytz==2024.1
 requests==2.32.3
-scikit-learn==1.5.0
-scipy==1.14.0
-seaborn==0.13.2
 six==1.16.0
-smmap==5.0.1
-threadpoolctl==3.5.0
 tqdm==4.66.4
-tzdata==2024.1
+typing_extensions==4.12.2
 urllib3==2.2.2
