--- a/llm-server/requirements.txt
+++ b/llm-server/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==0.31.0
 annotated-types==0.7.0
 anyio==4.4.0
 certifi==2024.6.2
@@ -38,7 +39,9 @@ nvidia-nvjitlink-cu12==12.5.40
 nvidia-nvtx-cu12==12.1.105
 orjson==3.10.4
 packaging==24.1
+peft==0.11.1
 pillow==10.3.0
+psutil==6.0.0
 pydantic==2.7.3
 pydantic_core==2.18.4
 Pygments==2.18.0
@@ -70,4 +73,3 @@ uvicorn==0.30.1
 uvloop==0.19.0
 watchfiles==0.22.0
 websockets==12.0
-accelerate
