--- a/llm-server/requirements.txt
+++ b/llm-server/requirements.txt
@@ -12,6 +12,7 @@ fastapi-cli==0.0.4
 filelock==3.14.0
 fsspec==2024.6.0
 h11==0.14.0
+h5py==3.11.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
@@ -39,14 +40,17 @@ nvidia-nvjitlink-cu12==12.5.40
 nvidia-nvtx-cu12==12.1.105
 orjson==3.10.4
 packaging==24.1
+pandas==2.2.2
 peft==0.11.1
 pillow==10.3.0
 psutil==6.0.0
 pydantic==2.7.3
 pydantic_core==2.18.4
 Pygments==2.18.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.1
 regex==2024.5.15
 requests==2.32.3
@@ -56,6 +60,7 @@ scikit-learn==1.5.0
 scipy==1.13.1
 sentence-transformers==3.0.1
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 starlette==0.37.2
 sympy==1.12.1
@@ -67,6 +72,7 @@ transformers==4.41.2
 triton==2.3.1
 typer==0.12.3
 typing_extensions==4.12.2
+tzdata==2024.1
 ujson==5.10.0
 urllib3==2.2.1
 uvicorn==0.30.1
