--- a/llm-server/requirements.txt
+++ b/llm-server/requirements.txt
@@ -4,12 +4,15 @@ anyio==4.4.0
 certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
+contourpy==1.2.1
+cycler==0.12.1
 dnspython==2.6.1
 email_validator==2.1.1
 exceptiongroup==1.2.1
 fastapi==0.111.0
 fastapi-cli==0.0.4
 filelock==3.14.0
+fonttools==4.53.0
 fsspec==2024.6.0
 h11==0.14.0
 h5py==3.11.0
@@ -20,6 +23,7 @@ huggingface-hub==0.23.3
 idna==3.7
 Jinja2==3.1.4
 joblib==1.4.2
+kiwisolver==1.4.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
@@ -47,6 +51,7 @@ psutil==6.0.0
 pydantic==2.7.3
 pydantic_core==2.18.4
 Pygments==2.18.0
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
