--- a/llamadoc/package.json
+++ b/llamadoc/package.json
@@ -9,13 +9,17 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": ["*"],
+  "activationEvents": [
+    "*"
+  ],
   "main": "./extension.js",
   "contributes": {
-    "commands": [{
-      "command": "llamadoc.scanFile",
-      "title": "Scan file"
-    }]
+    "commands": [
+      {
+        "command": "llamadoc.scanFile",
+        "title": "Scan file"
+      }
+    ]
   },
   "scripts": {
     "lint": "eslint .",
@@ -23,12 +27,13 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.91.0",
     "@types/mocha": "^10.0.7",
     "@types/node": "20.x",
-    "eslint": "^9.7.0",
-    "typescript": "^5.5.3",
+    "@types/vscode": "^1.91.0",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "eslint": "^9.7.0",
+    "globals": "^15.8.0",
+    "typescript": "^5.5.3"
   }
 }
